get users list with pagination, filter and search

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dev Plus Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose --runInBand",
     "start": "nodemon server.js"
   },
   "keywords": [],
