--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   "author": "Dev Plus",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.17.1",
+    "generate-password": "^1.7.0",
     "jest": "^29.0.2",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
     "mongoose-paginate-v2": "^1.7.0",
+    "nodemailer": "^6.7.8",
     "supertest": "^6.2.4"
   },
   "devDependencies": {
