--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "Dev Plus Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose --runInBand",
     "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "Dev Plus",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.17.1",
+    "generate-password": "^1.7.0",
     "jest": "^29.0.2",
+    "joi": "^17.6.0",
     "mongoose": "^6.5.4",
+    "nodemailer": "^6.7.8",
     "supertest": "^6.2.4"
   },
   "devDependencies": {
