--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Dev Plus Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --verbose --runInBand",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -26,6 +26,10 @@
     "mongoose": "^6.5.4",
     "nodemailer": "^6.7.8",
     "supertest": "^6.2.4"
+    
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "devDependencies": {
     "nodemon": "^1.19.4"
