--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "mongoose-paginate-v2": "^1.7.0",
     "nodemailer": "^6.7.8",
     "supertest": "^6.2.4"
+    
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "prettier": {
     "singleQuote": true
