--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "nodemailer": "^6.7.8",
     "supertest": "^6.2.4"
   },
+  "prettier": {
+    "singleQuote": true
+  },
   "devDependencies": {
     "cross-env": "^7.0.3",
     "nodemon": "^1.19.1"
