--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "mongoose-delete": "^0.5.4",
     "mongoose-paginate-v2": "^1.7.0",
     "nodemailer": "^6.7.8",
     "supertest": "^6.2.4"
