--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Dev Plus Project",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --runInBand",
-    "start": "nodemon server.js"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand --forceExit",
+    "start": "cross-env NODE_ENV=development nodemon server.js"
   },
   "keywords": [],
   "author": "Dev Plus",
@@ -21,10 +21,13 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.4",
+    "mongoose-delete": "^0.5.4",
+    "mongoose-paginate-v2": "^1.7.0",
     "nodemailer": "^6.7.8",
     "supertest": "^6.2.4"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^1.19.1"
   }
 }
