--- a/.github/workflows/develop-push-trigger.yml
+++ b/.github/workflows/develop-push-trigger.yml
@@ -12,7 +12,7 @@ jobs:
     with:
       env_tag: dev
       environment: Development
-      AWS_ECR_REPOSITORY: devplus-system-be
+      AWS_ECR_REPOSITORY: devplus-system-be-develop
 
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -20,13 +20,12 @@ jobs:
       AWS_REGION: ap-southeast-1
 
   deploy:
-    uses: ./.github/workflows/deploy.yml
+    uses: ./.github/workflows/deploy-s.yml
     needs: [build]
     with:
       env_tag: dev
       environment: Development
-      deploy_dir: ~/develop/devplus-be
-      AWS_ECR_REPOSITORY: devplus-system-be
+      AWS_ECR_REPOSITORY: devplus-system-be-develop
 
     secrets:
       AWS_EC2_HOST_NAME: ${{ secrets.AWS_EC2_HOST_NAME }}
