--- a/.github/workflows/module-cv-push-trigger.yml
+++ b/.github/workflows/module-cv-push-trigger.yml
@@ -1,8 +1,8 @@
-name: Deploy Development ENV
+name: Deploy Module CV ENV
 
 on:
   push:
-    branches: [dev]
+    branches: [module/cv]
 
   workflow_dispatch:
 
@@ -10,9 +10,9 @@ jobs:
   build:
     uses: ./.github/workflows/build.yml
     with:
-      env_tag: dev
+      env_tag: module-cv
       environment: Development
-      AWS_ECR_REPOSITORY: devplus-system-be
+      AWS_ECR_REPOSITORY: devplus-system-be-module-cv
 
     secrets:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -23,10 +23,9 @@ jobs:
     uses: ./.github/workflows/deploy-s.yml
     needs: [build]
     with:
-      env_tag: dev
+      env_tag: module-cv
       environment: Development
-      deploy_dir: ~/develop/devplus-be
-      AWS_ECR_REPOSITORY: devplus-system-be
+      AWS_ECR_REPOSITORY: devplus-system-be-module-cv
 
     secrets:
       AWS_EC2_HOST_NAME: ${{ secrets.AWS_EC2_HOST_NAME }}
