--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "dotenv": "^16.0.2",
     "express": "^4.17.1",
     "generate-password": "^1.7.0",
+    "htmlparser2": "^8.0.1",
     "jest": "^29.0.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "mammoth": "^1.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.5.4",
     "mongoose-delete": "^0.5.4",
